profiling-using-exp-runner/recursive-reverse-remote/experiments/reverse_experiment/run_1_repetition_0/energibridge.log
sampling interval: 200, target function: reverse_string_cache, input size: abcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcde
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.reverse as module; X = abcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcdeabcde; module.reverse_string_cache(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 9.167961296081543 for 0.23114659 sec of execution.
